--- a/artists.html
+++ b/artists.html
@@ -16,7 +16,7 @@
 				<div class="nav">
 					<ul class="nav-items">
 						<li><a href="index.html">Mission Statement</a></li>
-						<li><a href="artists.html">Artists..</a></li>
+						<li><a href="artists.html">Artists</a></li>
 						<li><a href="#">GN Audio</a></li>
 						<li><a href="#">GN Records</a></li>
 					</ul>
