Updated artists page, added new images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 			<div class="main">
 				
 				<div class="mission-statement">
+
 					<h1>Our Mission</h1>
+
+					<img src="imgs/pic-home.jpg" alt="Our Mission" />
 					
 					<p>
 						Bacon ipsum dolor amet pastrami flank strip steak tongue, ham hock spare ribs beef ribs shoulder bresaola swine shank doner jerky boudin. Beef ribs spare ribs filet mignon drumstick short loin, ribeye shankle turkey tenderloin strip steak short ribs fatback. Picanha beef ribs venison sirloin. Hamburger tail pork chop meatloaf ham hock chicken kevin flank turducken tongue meatball.	
