Updated h1 headers, changed ipsum

--- a/index.html
+++ b/index.html
@@ -36,20 +36,24 @@
 				
 				<div class="mission-statement">
 
-					<h1>Our Mission</h1>
+					<h1>OUR MISSION</h1>
 
 					<img src="imgs/pic-home.jpg" alt="Our Mission" />
 					
 					<p>
-						Bacon ipsum dolor amet pastrami flank strip steak tongue, ham hock spare ribs beef ribs shoulder bresaola swine shank doner jerky boudin. Beef ribs spare ribs filet mignon drumstick short loin, ribeye shankle turkey tenderloin strip steak short ribs fatback. Picanha beef ribs venison sirloin. Hamburger tail pork chop meatloaf ham hock chicken kevin flank turducken tongue meatball.	
+						And I'm glad to see that. But we shouldn't use our humility as an excuse for inaction. More of you have cars you can't afford to drive, credit card bills you can't afford to pay, and tuition that's beyond your reach. I believe that as hard as it will be, the change we need is coming. This history is well known..
 					</p>
 
 					<p>
-						Strip steak ball tip filet mignon chicken brisket kevin prosciutto pig beef tongue drumstick leberkas flank. Porchetta biltong ribeye short loin shankle. Jerky beef ribs sirloin capicola turducken bacon ham hock biltong pancetta hamburger filet mignon jowl. Strip steak kielbasa chuck pork jerky, corned beef sirloin cow frankfurter. Kielbasa shankle pork chop venison corned beef leberkas ham hock swine filet mignon kevin tongue meatball. Pork loin short loin pork chop cupim, ham hock prosciutto brisket.
+						They know we can do better. But I also get the sense that there's a hunger that's deeper than that - a hunger that goes beyond any single cause or issue. And it's a lesson we need to remember today - as members of another Joshua generation. Our government should work for us, not against us. I do not believe that women must make the same choices as men in order to be equal, and I respect those women who choose to live their lives in traditional roles.
 					</p>
 
 					<p>
-						Cupim bresaola turducken corned beef frankfurter pork loin. Bresaola porchetta pork venison leberkas, beef landjaeger pork loin tri-tip pastrami fatback turducken swine pig. Hamburger pig drumstick, beef ribs prosciutto shankle sirloin jerky tenderloin kevin rump leberkas. Corned beef kielbasa ground round venison doner sausage ham pancetta, shoulder pig tongue biltong meatloaf alcatra meatball. Pork loin jerky meatball short ribs ribeye bresaola.	
+						Tonight, we gather to affirm the greatness of our nation - not because of the height of our skyscrapers, or the power of our military, or the size of our economy. For the men and women of Reverend Wright's generation, the memories of humiliation and doubt and fear have not gone away; nor has the anger and the bitterness of those years.
+					</p>
+
+					<p>
+						Thank you, and God bless America.
 					</p>
 				</div>
 
