Added band_template page

--- a/artists.html
+++ b/artists.html
@@ -42,7 +42,7 @@
 						<h2>Cryptodira</h2>
 
 						<div class="photo-link cryptodira">
-							<a href="#" alt="website" target="_blank">
+							<a href="band_template.html" alt="website">
 								<img src="imgs/pic-cryptodira.jpg" alt="Cryptodira Img" />
 							</a>
 						</div>
@@ -61,7 +61,7 @@
 						<h2>Fit For An Autopsy</h2>
 
 						<div class="photo-link FFAA">
-							<a href="#" alt="website" target="_blank">
+							<a href="band_template.html" alt="website">
 								<img src="imgs/pic-FFAA.jpg" alt="FFAA Img" />
 							</a>
 						</div>
@@ -82,7 +82,7 @@
 						<h2>Norma Jean</h2>
 
 						<div class="photo-link norma-jean">
-							<a href="#" alt="website" target="_blank">
+							<a href="band_template.html" alt="website">
 								<img src="imgs/pic-normajean.jpg" alt="Norma Jean Img" />
 							</a>
 						</div>
@@ -101,7 +101,7 @@
 						<h2>Pvris</h2>
 
 						<div class="photo-link pvris">
-							<a href="#" alt="website" target="_blank">
+							<a href="band_template.html" alt="website">
 								<img src="imgs/pic-pvris.jpg" alt="pvris Img" />
 							</a>
 						</div>
@@ -120,7 +120,7 @@
 						<h2>Stray From The Path</h2>
 
 						<div class="photo-link sftp">
-							<a href="#" alt="website" target="_blank">
+							<a href="band_template.html" alt="website">
 								<img src="imgs/pic-sftp.jpg" alt="sftp Img" />
 							</a>
 						</div>
@@ -141,7 +141,7 @@
 						<h2>Thy Art Is Murder</h2>
 
 						<div class="photo-link thyart">
-							<a href="#" alt="website" target="_blank">
+							<a href="band_template.html" alt="website">
 								<img src="imgs/pic-thyart.jpg" alt="Thy Art Is Murder Img" />
 							</a>
 						</div>
