--- a/band_template.html
+++ b/band_template.html
@@ -38,7 +38,7 @@
 
 					<div class="back-button btn">
 						<a href="artists.html" alt="Back to Artists">
-							Back To Artists
+							&#10094;&nbsp;Back To Artists
 						</a>
 					</div>
 
@@ -59,14 +59,56 @@
 					</p>
 
 					<p>
-						Thank you, and God bless America.
+						<b>Contact:</b> <a href="#">SomeGuyOrGal@iamagreatmanager.com</a>
 					</p>
-				</div>
 
-				<div class="tour-dates">
-					
-				</div>
+					<div class="tour-dates">
+						<h2>Tour Dates</h2>
 
+						<table width="100%" cellpadding="10">
+							<thead colspan="3">
+								<tr align="left">
+									<th>date</th>
+									<th>location</th>
+									<th>venue</th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr align="left">
+									<td>03/17/2016</td>
+									<td>Ostrowiec Zwitokrzyski, Poland</td>
+									<td>Pub Dekada</td>
+								</tr>
+								<tr align="left">
+									<td>03/17/2016</td>
+									<td>Ostrowiec Zwitokrzyski, Poland</td>
+									<td>Pub Dekada</td>
+								</tr>
+								<tr align="left">
+									<td>03/17/2016</td>
+									<td>Ostrowiec Zwitokrzyski, Poland</td>
+									<td>Pub Dekada</td>
+								</tr>
+								<tr align="left">
+									<td>03/17/2016</td>
+									<td>Ostrowiec Zwitokrzyski, Poland</td>
+									<td>Pub Dekada</td>
+								</tr>
+								<tr align="left">
+									<td>03/17/2016</td>
+									<td>Ostrowiec Zwitokrzyski, Poland</td>
+									<td>Pub Dekada</td>
+								</tr>
+								<tr align="left">
+									<td>03/17/2016</td>
+									<td>Ostrowiec Zwitokrzyski, Poland</td>
+									<td>Pub Dekada</td>
+								</tr>
+							</tbody>
+						</table>
+					</div>
+
+				</div>
 			</div>
 
 		</div>
