--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<title>Graphic Nature :: Management</title>
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link type="text/css" rel="stylesheet" href="css/jquery.mmenu.all.css" />
+		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=yes" />
 
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
@@ -11,7 +11,9 @@
 
 		<script type="text/javascript">
 			$(function() {
-				$('nav#menu').mmenu();
+				$('nav#menu').mmenu({
+					slidingSubmenus: false
+				});
 			});
 		</script>
 
@@ -87,21 +89,10 @@
 	<!-- Mobile nav -->
 		<nav id="menu">
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#about">About us</a>
-					<ul>
-						<li><a href="#about/history">History</a></li>
-						<li><a href="#about/team">The team</a>
-							<ul>
-								<li><a href="#about/team/management">Management</a></li>
-								<li><a href="#about/team/sales">Sales</a></li>
-								<li><a href="#about/team/development">Development</a></li>
-							</ul>
-						</li>
-						<li><a href="#about/address">Our address</a></li>
-					</ul>
-				</li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="index.html">Mission Statement</a></li>
+				<li><a href="artists.html">Artists</a></li>
+				<li><a href="#">GN Audio</a></li>
+				<li><a href="#">GN Records</a></li>
 			</ul>
 		</nav>
 
