--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				Graphic Nature Management
 			</div>
 
-			<div id="main-navigation" class="sidenav">
+			<div class="sidenav">
 				<div class="logo">
 					<img src="imgs/pic-logo.jpg" alt="Graphic Nature Management" />
 				</div>
