Updated mobile styles for artists and band template pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			
 			<div class="header">
 				<a href="#menu"></a>
-				Graphic Nature Management
+				<span class="hdr-text">Graphic Nature Management</span>
 			</div>
 
 			<div class="sidenav">
