Updated mobile styles for artists and artist template

--- a/artists.html
+++ b/artists.html
@@ -20,16 +20,16 @@
 
 	<body>
 		<div class="content">
+		
 			<div class="header">
 				<a href="#menu"></a>
-				Graphic Nature Management
+				<span class="main-logo">Graphic Nature Management</span>
 			</div>
 
 			<div class="sidenav">
 				<div class="logo">
-					<img src="imgs/pic-logo.jpg" alt="Graphic Nature Management" />
+					<img src="imgs/img-white-side-logo.png" alt="Graphic Nature Management" />
 				</div>
-
 				<div class="nav">
 					<ul class="nav-items">
 						<li><a href="index.html">Mission Statement</a></li>
@@ -38,15 +38,12 @@
 						<li><a href="#">GN Records</a></li>
 					</ul>
 				</div>
-	
-				<div class"nav-footer">
-					<div class="social">
-						<img src="imgs/social/facebook-square.png" height="35" width="35" alt="Facebook" />
-						<img src="imgs/social/twitter.png" height="35" width="35" alt="Twitter" />
-						<img src="imgs/social/instagram.png" height="35" width="35" alt="Instagram" />
-					</div>
+				
+				<div class="social">
+					<img src="imgs/social/facebook-square.png" height="35" width="35" alt="Facebook" />
+					<img src="imgs/social/twitter.png" height="35" width="35" alt="Twitter" />
+					<img src="imgs/social/instagram.png" height="35" width="35" alt="Instagram" />
 				</div>
-
 			</div>
 
 			<div class="main">
