--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 				});
 			});
 		</script>
-
 	</head>
 
 	<body>
@@ -34,7 +33,7 @@
 				<div class="nav">
 					<ul class="nav-items">
 						<li><a href="index.html">Mission Statement</a></li>
-						<li><a href="#">Artists</a></li>
+						<li><a href="artists.html">Artists</a></li>
 						<li><a href="#">GN Audio</a></li>
 						<li><a href="#">GN Records</a></li>
 					</ul>
@@ -45,7 +44,6 @@
 					<img src="imgs/social/twitter.png" height="35" width="35" alt="Twitter" />
 					<img src="imgs/social/instagram.png" height="35" width="35" alt="Instagram" />
 				</div>
-
 			</div>
 
 			<div class="main">
