--- a/artists.html
+++ b/artists.html
@@ -34,6 +34,7 @@
 					<ul class="nav-items">
 						<li><a href="index.html">Mission Statement</a></li>
 						<li><a href="artists.html">Artists</a></li>
+						<li><a href="news.html">News </a></li>
 						<li><a href="#">GN Audio</a></li>
 						<li><a href="#">GN Records</a></li>
 					</ul>
@@ -177,6 +178,7 @@
 			<ul>
 				<li><a href="index.html">Mission Statement</a></li>
 				<li><a href="artists.html">Artists</a></li>
+				<li><a href="news.html">News </a></li>
 				<li><a href="#">GN Audio</a></li>
 				<li><a href="#">GN Records</a></li>
 			</ul>
